libxfont (1:1.4.4-2) UNRELEASED; urgency=low

  * Switch to dh:
    - Build debhelper build-dep and compat.
    - Rewrite debian/rules, using autoreconf and quilt sequences.
    - Adjust build dependencies accordingly.
    - Use build-main and build-udeb as build directories.
    - Adjust .install accordingly.
  * Remove xsfbs accordingly.

 -- Cyril Brulebois <kibi@debian.org>  Mon, 02 Jan 2012 04:46:05 +0100

libxfont (1:1.4.4-1) unstable; urgency=high

  [ Julien Cristau ]
  * Drop Pre-Depends on x11-common (only needed for upgrades from the
    monolith) and Replaces on xlibs-static-dev (hasn't existed in forever).

  [ Cyril Brulebois ]
  * New upstream release:
    - LZW decompress: fix for CVE-2011-2895. From the commit message:
      “Specially crafted LZW stream can crash an application using libXfont
       that is used to open untrusted font files.  With X server, this may
       allow privilege escalation when exploited.”
  * Set urgency to “high” accordingly.
  * Update debian/copyright from upstream COPYING.
  * Bump xorg-sgml-doctools build-dep.
  * Drop xorg.css from .install, no longer shipped upstream.

 -- Cyril Brulebois <kibi@debian.org>  Thu, 11 Aug 2011 11:17:16 +0200

libxfont (1:1.4.3-2) unstable; urgency=low

  * Upload to unstable.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 05 Feb 2011 11:48:49 +0100

libxfont (1:1.4.3-1) experimental; urgency=low

  * New upstream release.
  * Bump xutils-dev build-dep for new macros.
  * Add xmlto, xorg-sgml-doctools, and w3m build-dep for the doc.
  * Pass --with-xmlto and --without-fop for the regular build (we want
    html and txt only). Disable both for the udeb build.
  * Tweak doc filenames, and handle that through dh_install.
  * Add --fail-missing -XlibXfont.la for the second dh_install call (the
    udeb one), for additional safety.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 19 Nov 2010 01:17:48 +0100

libxfont (1:1.4.2-1) experimental; urgency=low

  * New upstream release.