@@ -7,6 +7,8 @@ libxfont (1:1.4.4-2) UNRELEASED; urgency=low
     - Use build-main and build-udeb as build directories.
     - Adjust .install accordingly.
   * Remove xsfbs accordingly.
+  * Add support for hardened build flags through dpkg-buildflags, based
+    on a patch by Moritz Muehlenhoff, thanks! (Closes: #654154).
 
  -- Cyril Brulebois <kibi@debian.org>  Mon, 02 Jan 2012 04:46:05 +0100
 
